Kubernetes/Azure/configure/cert-manager/namespace_certmanager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    ns: cert-manager
